@@ -1,3 +1,10 @@
+Sat Jan 19 17:43:57 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	src:
+	* symbol.c (Symbol_PrintAll): Fix DEBUG build.
+	* code.c (Code_EvalLow): Likewise.
+	* asm.c (ASM_DoPass): Likewise.
+
 Sat Jan 19 17:40:00 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	* src/m_cpu.c (m_nop): Code reformat.
